--- a/src/main/resources/assets/jurassicraft/lang/en_US.lang
+++ b/src/main/resources/assets/jurassicraft/lang/en_US.lang
@@ -208,7 +208,7 @@ container.pad.infoAnkylosaur.page2=Ankylosaurus was a large animal by modern sta
 container.pad.infoAnkylosaur.page3=The tail club of Ankylosaurus is composed of several large osteoderms, which are fused to the last few tail vertebrae. It was heavy and supported by the last seven tail vertebrae, which interlocked to form a stiff rod at the base of the club.
 container.pad.infoBrachiosaur.page1=Brachiosaurus is a genus of sauropod dinosaur from the Jurassic Morrison Formation of North America. It was first described by Elmer S. Riggs in 1903 from fossils found in the Grand River Canyon (now Colorado River) of western Colorado, in the United States.
 container.pad.infoBrachiosaur.page2= The proportions of Brachiosaurus are unlike most sauropods. The forelimbs were longer than the hindlimbs, which resulted in a steeply inclined trunk, and its tail was shorter in proportion to its neck than other sauropods of the Jurassic.
-container.pad.infoVelociraptor.page1=Velociraptor
+container.pad.infoVelociraptor.page1=Velociraptor, meaning "swift seizer" they are a genus of Saurischia the two types were present. 
 container.pad.infoStegosaur.page1=Stegosaurus, meaning "roof lizard" in reference to its bony plates, is a genus of armored stegosaurid dinosaur. They lived during the Late Jurassic period (Kimmeridgian to early Tithonian), some 155 to 150 million years ago in what is now western North America.
 container.pad.infoStegosaur.page2=Its array of plates and spikes has been the subject of much speculation. The spikes were most likely used for defense, while the plates have also been proposed as a defensive mechanism, as well as having display and thermoregulatory functions.
 container.pad.infoTriceratops.page1=Triceratops, "three-horn face", is a genus of herbivorous ceratopsid dinosaur that first appeared during the late Maastrichtian stage of the late Cretaceous period, about 68 million years ago in what is now North America.
@@ -216,25 +216,24 @@ container.pad.infoTriceratops.page2=Triceratops are estimated to have reached ab
 container.pad.infoCoelacanth.page1=Coelacanth constitutes a now rare order of fish that includes two extant species in the genus Latimeria: the West Indian Ocean coelacanth and the Indonesian coelacanth.
 container.pad.infoTyrannosaurus.page1=Tyrannosaurus, meaning "tyrant lizard", is a genus of coelurosaurian theropod dinosaur. Tyrannosaurus lived throughout what is now western North America, which then was an island continent named Laramidia. Tyrannosaurus had a much wider range than other tyrannosaurids. 
 container.pad.infoTyrannosaurus.page2=Fossils are found in a variety of rock formations dating to the Maastrichtian age of the upper Cretaceous Period, 67 to 66 million years ago. 
-container.pad.infoGallimimus.page1=Gallimimus
-container.pad.infoHypsilophodon.page1=Hypsilophodon
-container.pad.infoLeaellynasaur.page1=Leaellynasaur
+container.pad.infoGallimimus.page1=Gallimimus, meaning "Lizard, resembling a chicken" is a genus of Gallimimus, Speed of about 70km per hour weight : 440kg, Length : 4~6m 
+container.pad.infoHypsilophodon.page1=Hypsilophodon, Small dinosaur that lived in the Early Cretaceous. Hypsilophodon fossils can find in Europe.
+container.pad.infoLeaellynasaur.page1=Leaellynasaur is Small herbivorous dinosaurs that lived in the Early Cretaceous 
 container.pad.infoHerrerasaur.page1=Herrerasaurus was one of the earliest dinosaurs. Its name means "Herrera's lizard", after the rancher who discovered the first specimen. All known fossils of this carnivore have been discovered in rocks of Carnian age, 231.4 million years ago in northwestern Argentina.
 container.pad.infoHerrerasaur.page2=Herrerasaurus was a lightly built bipedal carnivore with a long tail and a relatively small head. Its length is estimated at 3 to 6 meters (10 to 20 ft), and its hip height at more than 1.1 meters (3.3 ft). It may have weighed around 210 to 350 kilograms (463 to 772 lb).
-container.pad.infoParasaurolophus.page1=Parasaurolophus
-container.pad.infoMeganeura.page1=Meganeura
-container.pad.infoDilophosaurus.page1=Dilophosaurus
-container.pad.infoTylosaurus.page1=Tylosaurus
-container.pad.infoOviraptor.page1=Oviraptor
-container.pad.infoCearadactylus.page1=Cearadactylus
-container.pad.infoSarcosuchus.page1=Sarcosuchus
-container.pad.infoMammoth.page1=Mammoth
-container.pad.infoArsinoitherium.page1=Arsinoitherium
-container.pad.infoBasilosaurus.page1=Basilosaurus
-container.pad.infoLeptictidium.page1=Leptictidium
-container.pad.infoTitanis.page1=Titanis
-container.pad.infoUintatherium.page1=Uintatherium
-container.pad.infoParaceratherium.page1=Paraceratherium
-container.pad.infoDeinotherium.page1=Deinotherium
-
+container.pad.infoParasaurolophus.page1=Parasaurolophus Late Cretaceous dinosaurs that lived in the United States and Canada. They had no weapons, so they must remain as a coward.
+container.pad.infoMeganeura.page1=Meganeura, just.... reallllllly big..... Dragonfly
+container.pad.infoDilophosaurus.page1=Dilophosaurus, they lived in the jurassic Dilophosaurs, a meaning "A two-crested lizard"
+container.pad.infoTylosaurus.page1=Tylosaurus is stronger than Megallodon.... (guess)
+container.pad.infoOviraptor.page1=Oviraptor Dinosaur that lived in the Late Cretaceous Triceratops fossils were found dead and the fight is well known.
+container.pad.infoCearadactylus.page1=Cearadactylus, meaning a "Caesar's finger" 
+container.pad.infoSarcosuchus.page1=Sarcosuchus really big crocodile.
+container.pad.infoMammoth.page1=Mammoth, Mammals that lived about 4 million years ago
+container.pad.infoArsinoitherium.page1=Arsinoitherium, Paleontology
+container.pad.infoBasilosaurus.page1=Basilosaurus it kinds of whale, Predatory whale... 
+container.pad.infoLeptictidium.page1=They looks like "Kangaroo + mice"
+container.pad.infoTitanis.page1=they looks like Dodo, they cound't fly
+container.pad.infoUintatherium.page1=Uintatherium - really big Mammals
+container.pad.infoParaceratherium.page1=........... looks like Elephant + giraffe....
+container.pad.infoDeinotherium.page1=Deinotherium, meaning a "Scary beast" it seems like elephant
 
